--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_checkout.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_checkout.scss
@@ -890,3 +890,84 @@
 }
 
 /*Order confirmation page*/
+
+.checkout-shipping-items.left-block-width h1{
+     font-size: 24px;
+ }
+ .checkout-shipping-items.left-block-width .panel-defaultHeading{
+     font-size: 24px;
+ }
+ .checkout-shipping-items.left-block-width .form-control{
+         width: auto;
+ }
+ .right-block.shipping.right-block-width .subtotals.summary-info{
+ 
+    
+    margin:0px;
+    
+ 
+ }
+ .right-block.shipping.right-block-width .subtotals.summary-info h2{
+    border-bottom: 1px solid #ccc;
+    margin: 0px 0px;
+    padding: 15px 0px;
+    font-size: 18px;
+     text-align: center;
+ }
+ .right-block.shipping.right-block-width .subtotals.summary-info ul.totals{
+        padding: 15px;
+ }
+ .checkout-paymentmethod #card, .checkout-paymentmethod  #cardDebit{
+     background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 20px;
+ }
+.checkout-paymentmethod #savedCard{
+     background: transparent;
+    border: 0px;
+    border-radius: 0px;
+    padding: 0px;
+        margin-bottom: 20px;
+}
+.payment-section .checkout-paymentmethod .card-group fieldset{
+     background: transparent;
+    padding: 10px;
+    border: 0px;
+    border-radius: 0px;
+ 
+}
+.card-tab .active_tab.debit_tab {
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+}
+.card-tab .debit_tab {
+    display: inline-block;
+    padding: 10px;
+    border-radius: 3px;
+    border: 1px solid #000;
+    background: #fff;
+    cursor: pointer;
+    vertical-align: top;
+}
+.card-tab .new_card_tab.debit_tab {
+    margin-left: -5px;
+}
+#savedDebitCard .debit-card-group {
+    background: #f9f9f9;
+    padding: 25px;
+    border: 1px solid #dee2eb;
+    border-radius: 10px;
+}
+#savedCardDebit #savedDebitCard .card.card-num {
+    display: inline-block;
+    width: 80%;
+}
+#savedCardDebit #savedDebitCard .cvv.right-align-form {
+    display: inline-block;
+    width: 19%;
+}
+#savedCardDebit #savedDebitCard .cvv.right-align-form #cvv1 {
+    width: 100%;
+}
